tests/type-check/bad/data-as-object-update-non-ref.arr
data Foo:
  | bar(a :: Number, ref b :: String)
end

bar(1, "a").{c: 3}